Fixed skills table overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -494,6 +494,9 @@ nav ul {
 }
 
 /* table */
+#skills-table {
+	overflow-x: scroll;
+}
 table {
 	width: 100%;
 	border-collapse: collapse;
